# autogen-gemini-assistant

./: LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
docker_executor/: Dockerfile  requirements.txt
